    :xhtml.
  * Added the `abbr`, `dfn`, `kbd`, `mark`, `s`, `samp`, `time`, and `var`
    elements to the whitelists for `Sanitize::Config::BASIC` and
    `Sanitize::Config::RELAXED`.
  * Added the `bdo`, `del`, `figcaption`, `figure`, `hgroup`, `ins`, `rp`, `rt`,
    `ruby`, and `wbr` elements to the whitelist for `Sanitize::Config::RELAXED`.
  * The environment hash passed into transformers now includes an
    :allowed_elements Hash to facilitate faster lookups when attempting to
    determine whether an element is in the whitelist. [Suggested by Nicholas
    Evans]
  * The environment hash passed into transformers now includes a
    :whitelist_nodes Array, so transformers now have insight into what nodes
    have been whitelisted by other transformers. [Suggested by Nicholas Evans]
  * Added a :process_text_nodes config setting. If set to true, Sanitize will
    pass text nodes to transformers. The default is false. [Ardie Saeidi]
  * Bumped minimum Nokogiri version to 1.4.4 to avoid a bug in 1.4.2+ (issue
    #315) that caused "</body></html>" to be appended to the CDATA inside
    unterminated script and style elements.

Version 1.2.1 (2010-04-20)
  * Added a :remove_contents config setting. If set to true, Sanitize will
    remove the contents of all non-whitelisted elements in addition to the
    elements themselves. If set to an Array of element names, Sanitize will
    remove the contents of only those elements (when filtered), and leave the
    contents of other filtered elements. [Thanks to Rafael Souza for the Array
    option]
  * Added an :output_encoding config setting to allow the character encoding for
    HTML output to be specified. The default is 'utf-8'.
  * The environment hash passed into transformers now includes a :node_name item
    containing the lowercase name of the current HTML node (e.g. "div").
  * Returning anything other than a Hash or nil from a transformer will now